# neat-interpolation

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  ez-interpolation.cabal  neat-interpolation.cabal
.github/workflows/: cd.yaml  ci.yaml
executables/: APITests.hs
src/: Demo.hs  EZInterpolation.hs  NeatInterpolation.hs
src/EZInterpolation/: Parsing.hs  String.hs
src/NeatInterpolation/: Parsing.hs  Prelude.hs  String.hs
test/: Main.hs
