name:
  neat-interpolation
version:
  0.2.0
synopsis:
  A quasiquoter for neat and simple multiline text interpolation
description:
  NeatInterpolation provides a quasiquoter for producing strings 
  with a simple interpolation of input values. 
  It removes the excessive indentation from the input and 
  accurately manages the indentation of all lines of interpolated variables. 
category:
  String, QuasiQoutes
license:
  MIT
license-file:
  LICENSE
copyright:
  (c) 2013, Nikita Volkov
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:
  https://github.com/nikita-volkov/neat-interpolation
bug-reports:
  https://github.com/nikita-volkov/neat-interpolation/issues
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/neat-interpolation.git


library
  hs-source-dirs:
    src
  exposed-modules:
    NeatInterpolation
  other-modules:
    NeatInterpolation.Prelude
    NeatInterpolation.Parsing
    NeatInterpolation.String
  build-depends:
    parsec,
    template-haskell,
    base >= 4.5 && < 5
  default-extensions:
    NoImplicitPrelude
    PatternGuards
    MultiWayIf
    LambdaCase
    Arrows
    MultiParamTypeClasses
    NoMonomorphismRestriction
    FlexibleInstances
    FlexibleContexts
    GADTs
    EmptyDataDecls
    StandaloneDeriving
    ConstraintKinds
    RankNTypes
    TypeFamilies
    TypeOperators
    DataKinds
    ImpredicativeTypes
    LiberalTypeSynonyms
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    GeneralizedNewtypeDeriving
    DeriveDataTypeable
    DeriveGeneric
    DefaultSignatures
    ScopedTypeVariables
    BangPatterns
    RecordWildCards
    TupleSections
  default-language:
    Haskell2010


executable neat-interpolation-demo
  hs-source-dirs:
    src
  main-is:
    Demo.hs
  ghc-options:
    -threaded 
    "-with-rtsopts=-N"
  build-depends:
    parsec,
    template-haskell,
    base >= 4.5 && < 5
  default-extensions:
    NoImplicitPrelude
    PatternGuards
    MultiWayIf
    LambdaCase
    Arrows
    MultiParamTypeClasses
    NoMonomorphismRestriction
    FlexibleInstances
    FlexibleContexts
    GADTs
    EmptyDataDecls
    StandaloneDeriving
    ConstraintKinds
    RankNTypes
    TypeFamilies
    TypeOperators
    DataKinds
    ImpredicativeTypes
    LiberalTypeSynonyms
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    GeneralizedNewtypeDeriving
    DeriveDataTypeable
    DeriveGeneric
    DefaultSignatures
    ScopedTypeVariables
    BangPatterns
    RecordWildCards
    TupleSections
  default-language:
    Haskell2010
